Fix spacing for sensitive collection note

--- a/app/javascript/mastodon/features/collections/detail/styles.module.scss
+++ b/app/javascript/mastodon/features/collections/detail/styles.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 12px;
   padding: 16px;
+  padding-bottom: 24px;
 }
 
 .titleWithMenu {
@@ -62,9 +63,12 @@
   }
 }
 
+.sensitiveScreen {
+  margin: 16px;
+}
+
 .columnSubheading {
   padding-inline: 16px;
-  padding-bottom: 12px;
   font-size: 15px;
   font-weight: 500;
 }
